--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,23 @@ audio {
   border-radius: 5px; /* Rounded corners */
   padding: 10px; /* Padding around audio controls */
 }
+
+nav {
+  background-color: #000; /* Set to black */
+  overflow: hidden;
+}
+
+nav a {
+  float: left;
+  display: block;
+  color: white; /* Set link text color to white */
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-family: Arial, sans-serif; /* Make sure this matches the font used on the homepage */
+}
+
+nav a:hover {
+  background-color: #4b0082; /* Indigo hover effect */
+  color: white;
+}
